Fix tests coverage